--- a/ctfo_client/src/App.css
+++ b/ctfo_client/src/App.css
@@ -7,6 +7,8 @@
   font-size: 30px;
 }
 
+/* buttons */
+
 #kittens {
   width: 40%;
   height: auto;
@@ -26,4 +28,16 @@
     box-shadow: 0 0 3px gray;
     font-size:20px;
     font-weight:bold;
+}
+
+/* modal */
+
+.modal-box {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  height: auto;
+  background: #8502fd;
+  border-radius: 8px;
+  color: white;
 }
