--- a/ctfo_client/src/HomePage.css
+++ b/ctfo_client/src/HomePage.css
@@ -1,4 +1,23 @@
 h1 {
   font-size: 40px;
-  
+}
+
+body {
+  background-image: url("https://images.pexels.com/photos/1701412/pexels-photo-1701412.jpeg?cs=srgb&dl=background-color-colorful-background-1701412.jpg&fm=jpg");
+  background-size: cover;
+}
+
+/* navBar */
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
 }
