--- a/ctfo_client/src/Components/styles/buttons.css
+++ b/ctfo_client/src/Components/styles/buttons.css
@@ -1,11 +1,25 @@
 #kittens {
-  width: 40%;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
+
+.you-tube {
+  width: 100%;
+  height: 100%;
+}
+
 
 #button-container {
   display: flex;
+}
 
+.modal-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  background-color: #def2f7;;
 }
 
 .button {
