added styling to mood journal

--- a/ctfo_client/src/Components/styles/buttons.css
+++ b/ctfo_client/src/Components/styles/buttons.css
@@ -8,9 +8,15 @@
   height: 100%;
 }
 
-
 #button-container {
   display: flex;
+}
+
+p {
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Varela Round', sans-serif;
 }
 
 .modal-box {
@@ -38,7 +44,6 @@
     transition: 0.5s;
     margin: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
-
 }
 
 .button:hover {
