--- a/ctfo_client/src/HomePage.css
+++ b/ctfo_client/src/HomePage.css
@@ -107,7 +107,7 @@ h1 {
 
 /* mediaQueries */
 
-/* iphone5 */
+/* phones */
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 568px) {
@@ -136,5 +136,21 @@ and (max-device-width : 568px) {
     width: auto;
     height: auto;
     text-align: center;
+  }
+}
+
+/* ipads */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+
+  .App {
+    height: 175px;
+  }
+
+  .slider {
+    margin: 50px;
+    width: 600px;
   }
 }
