--- a/ctfo_client/src/Components/styles/HomePage.css
+++ b/ctfo_client/src/Components/styles/HomePage.css
@@ -79,6 +79,16 @@ h1 {
 	height: 100%;
 }
 
+/* VideoPlayer */
+
+.you-tube {
+  position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 /* commentForm */
 
 .comment-form {
