--- a/ctfo_client/src/Components/styles/HomePage.css
+++ b/ctfo_client/src/Components/styles/HomePage.css
@@ -10,7 +10,6 @@ h1 {
   margin-top: 30px;
   padding: 10px;
   font-family: 'Varela Round', sans-serif;
-  font-style: linear-gradient(#b5f4fc, #d1d1d1);
   width: auto;
   height: auto;
 }
@@ -117,6 +116,24 @@ h1 {
   width: auto;
 }
 
+/* kitten button */
+
+.kittens {
+  width: 100%;
+  height: auto;
+}
+
+/* modalBoxes */
+
+.ReactModal__Overlay {
+  height: 600px;
+}
+
+.ReactModal__Content {
+  width: 100%;
+  height: auto;
+}
+
 /* mediaQueries */
 @media only screen
 and (min-width: 150px)
@@ -159,6 +176,16 @@ and (max-device-width : 568px) {
     height: auto;
     text-align: center;
   }
+
+  .ReactModal__Overlay {
+    height: 250px;
+    background-color: black;
+  }
+
+  .close-modal-window {
+    font-size: 30px;
+  }
+
 }
 
 /* ipads */
@@ -175,4 +202,14 @@ and (orientation : portrait) {
     margin: 50px;
     width: 600px;
   }
+
+  .ReactModal__Overlay {
+    height: 200px;
+    background-color: black;
+  }
+
+  .close-modal-window {
+    font-size: 30px;
+  }
+
 }
