--- a/ctfo_client/src/Components/styles/navBar.css
+++ b/ctfo_client/src/Components/styles/navBar.css
@@ -1,12 +1,16 @@
 #navBar {
   margin: 0;
   padding: 0;
-  display: inline-flex;
-  width: auto;
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 60%;
+  margin: auto;
 }
 
 ul {
+  text-align: center;
   margin: 0;
   padding: 0;
   display: flex;
