--- a/ctfo_client/src/Components/styles/map.css
+++ b/ctfo_client/src/Components/styles/map.css
@@ -1,10 +1,13 @@
+.mapbox-map {
+  padding: 0;
+}
+
 #map {
-  height: auto;
-  width: auto;
+  padding: 0;
 }
 
 canvas {
   position: relative !important;
   height: 100% !important;
-  width: 75% !important;
+  width: 100% !important;
 }
